--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,39 @@
 <body>
 
 	<!-- Custom HTML -->
-	Hello world! 2
+	<div class="wrapper">
+
+		<!-- Header -->
+		<div class="container">
+			<header class="header">
+				<div class="header__top_line">
+					Top line
+				</div>
+				<nav class="header__nav">
+					Навигация
+				</nav>
+			</header>
+		</div>
+		
+		<!-- Main content -->
+		<div class="content">
+			<div class="container">
+				<div class="content__slider">
+					Основной контент
+				</div>
+			</div>
+		</div>
+
+		<!-- Footer -->
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__content">
+					Футер
+				</div>
+			</div>
+		</footer>
+
+	</div>
 
 	<!-- Optimized loading JS Start -->
 	<script>var scr = {"scripts":[
